# sermon-ai-audio-processor

./: .gitignore  README.md  config.example.yaml  examples_config.yaml  llm_manager.py  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-linux.txt  requirements.txt  sermon_updater.py  test_error_handling.py  test_fallback.py  test_validation.py  validate_descriptions.py
.github/: copilot-instructions.md
docs/: AI_MODELS_INSTALLATION.md  DEPENDENCY_FIXES_SUMMARY.md  DESCRIPTION_VALIDATION_FEATURE.md  DESCRIPTION_VALIDATION_IMPLEMENTATION.md  DESCRIPTION_VALIDATION_SYSTEM.md  FINAL_OPTIMIZATION_SUMMARY.md  LINUX_INSTALLATION.md  LLM_Configuration_Guide.md  LLM_ERROR_HANDLING.md  METADATA_PROCESSING_ENHANCEMENT.md  PROJECT_REORGANIZATION_SUMMARY.md  sermonaudio_api_v2_openapi.json
src/: __init__.py  audio_processing.py  description_validator.py  llm_manager.py  validate_descriptions.py
tests/: DEBUG_IMPLEMENTATION.md  ENHANCEMENT_MODEL_TESTING_RESULTS.md  README.md  UV_SETUP.md  import_test.py  list_node_methods.py  memory_test.py  pipe_test.py  test_all_filters_cli.py  test_cli_args.py  test_config.yaml  test_debug.py  test_llm_manager.py  test_no_compression.py  test_ollama_connection.py  test_ollama_fallback.py  test_ollama_http_direct.py  test_openai_connection.py  test_optimized_enhancement.py  test_quick_models.py  test_resemble_enhance.py  test_sermon_api_update.py  test_sermon_raw_api.py  test_setup.py  test_transcript_api.py  test_transcript_pull.py  windows_resemble_wrapper.py
tests/api/: README.md  explore_api.py  test_transcript_html_parse.py  test_transcript_web_endpoint.py
tests/audio/: README.md  fix_resemble_windows.py  test_best_enhancement_models.py  test_deepfilter.py  test_no_compression.py  test_optimized_enhancement.py  test_quick_models.py  test_quick_resemble.py  test_resemble_comprehensive.py  test_resemble_enhance.py  test_resemble_real_audio.py
tests/cli/: README.md  test_cli_args.py  test_cli_live_api_integration.py
tests/integration/: README.md  test_full_pipeline_gpu.py  test_real_sermon_deepfilternet.py
tests/llm/: README.md  test_description_validator.py  test_error_handling.py  test_fallback.py  test_hashtag_integration.py  test_hashtag_verification.py  test_llm_manager.py  test_ollama_debug.py  test_ollama_http.py  test_validation.py
tests/unit/: README.md  test_routing_fix.py  test_setup.py
tests/utils/: README.md
