[project]
name = "sermon-audio-updater"
version = "0.1.0"
description = "Automated sermon processing tool for SermonAudio"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core API and configuration
    "sermonaudio>=1.0.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.19.0",
    
    # Audio processing core
    "pydub>=0.25.1",
    "numpy>=1.26.2",  # Updated for resemble-enhance compatibility
    "scipy>=1.11.4",  # Updated for resemble-enhance compatibility
    "soundfile>=0.12.1",
    "librosa>=0.10.1",  # Updated for resemble-enhance compatibility
    "noisereduce>=2.0.0",
    
    # PyTorch ecosystem (compatible with resemble-enhance requirements)
    "torch>=2.1.1",
    "torchaudio>=2.1.1", 
    "torchvision>=0.16.1",
    
    # AI Enhancement models (core)
    "deepfilternet>=0.5.6",
    # Note: resemble-enhance has deepspeed dependency that causes build issues
    # Install manually: pip install resemble-enhance
    
    # Resemble-enhance dependencies (for manual installation)
    "celluloid>=0.2.0",
    "matplotlib>=3.8.1",
    "omegaconf>=2.3.0",
    "pandas>=2.1.3",
    "ptflops>=0.7.1.2",
    "rich>=13.7.0",
    "resampy>=0.4.2",
    "tabulate>=0.8.10",
    "gradio>=4.8.0",
    
    # LLM providers
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "langchain>=0.0.200",
    "langchain-community>=0.0.1",
    
    # Utilities
    "tenacity>=8.2.0",
    "tqdm>=4.66.1",  # Updated for resemble-enhance compatibility
    "colorlog>=6.7.0",
    "schedule>=1.1.0",
    "psutil>=5.9.0",  # Updated version
]

[project.optional-dependencies]
# Enhanced audio processing models (manual installation recommended)
# These have complex dependencies and should be installed separately:
# pip install voicefixer speechbrain demucs
ai-models = [
    # Commented out due to complex build requirements
    # "voicefixer>=0.1.2",
    # "speechbrain>=0.5.0", 
    # "demucs>=4.0.0",
]
# Audacity integration (optional)
audacity = ["PyAudacity>=0.1.3"]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "pylint>=2.15.0",
    "ruff>=0.1.0",
]
# All optional dependencies
all = [
    "sermon-audio-updater[audacity,dev]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "config.yaml",
    "requirements.txt",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "ruff>=0.1.0",
    # Note: Optional AI models like voicefixer, speechbrain, demucs
    # and deepspeed should be installed manually due to complex dependencies
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
